# Data-Science-Project

./: Description Livestock Production.txt  LICENSE  Livestock_Dictionary.csv  Makefile  README.md  pyproject.toml  requirements.txt
.gdrive/: .gitignore  init_dvc_repo.dvc
data/processed/: .gitignore  livestock_tidy_data.parquet.dvc  water_quality_tidy_data.parquet.dvc
data/raw/: .gitignore  livestock_2013_raw_data.csv.dvc  livestock_2013_raw_data.txt  livestock_2014_raw_data.csv.dvc  livestock_2014_raw_data.txt  livestock_2015_raw_data.csv.dvc  livestock_2015_raw_data.txt  livestock_2016_raw_data.csv.dvc  livestock_2016_raw_data.txt  livestock_2017_raw_data.csv.dvc  livestock_2017_raw_data.txt  livestock_2018_raw_data.csv.dvc  livestock_2018_raw_data.txt  livestock_2019_raw_data.csv.dvc  livestock_2019_raw_data.txt  livestock_2020_raw_data.csv.dvc  livestock_2020_raw_data.txt  livestock_2021_raw_data.csv.dvc  livestock_2021_raw_data.txt  livestock_2022_raw_data.csv.dvc  livestock_2022_raw_data.txt  livestock_2023_raw_data.csv.dvc  (+3 more)
docs/: livestock_report.html  mkdocs.yml
docs/docs/: index.md
modules/: config.py  dataset.py
notebooks/: 0.01-amg-data-source.ipynb  0.01-chc-data-exploration.ipynb  0.01-clsl-data-exploration.ipynb  0.02-amg-data-source.ipynb  0.02.clsl.data.exploration.ipynb  1.01-amg-data-cleaning.ipynb  1.01-clsl-data-cleaning.ipynb  1.02-amg-data-cleaning.ipynb  1.02-clsl-data-cleaning.ipynb  1.03-amg-data-cleaning.ipynb
project_name/: pyproject.toml
references/: water_quality_raw_data_references.csv  water_quality_tidy_data_references.csv
(+5 files in other folders)
